Image correction and Scrollbar
Added ../ before the link of the images and I have changed the style of the scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,22 @@ html {
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--warm-black) ;
+    border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: var(--warm-black-plus-1) ;; 
+}
+
 header {
     position: relative;
     display: flex;
@@ -95,7 +111,7 @@ header img {
     width: 13px;
     height: 8px;
     margin-left: 10px;
-    background-image: url('/assets/icons/down-arrow.svg');
+    background-image: url('../assets/icons/down-arrow.svg');
 }
 
 
@@ -125,7 +141,7 @@ main {
     width: 200px;
     height: 200px;
     margin: 0 auto 50px;
-    background-image: url('/assets/img/Bitcoin.svg');
+    background-image: url('../assets/img/Bitcoin.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -236,7 +252,7 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url('/assets/icons/trending-down.svg');
+    background-image: url('../assets/icons/trending-down.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -247,7 +263,7 @@ main {
     width: 15px;
     height: 15px;
     margin-left: 10px;
-    background-image: url('/assets/icons/trending-up.svg');
+    background-image: url('../assets/icons/trending-up.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -325,7 +341,7 @@ main {
     top: 0;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url('/assets/icons/batata.svg');
+    background-image: url('../assets/icons/batata.svg');
 }
 
 .product-detail-title {
@@ -375,19 +391,19 @@ main {
 }
 
 .product-detail--card .clock {
-    background-image: url('/assets/icons/clock.svg');
+    background-image: url('../assets/icons/clock.svg');
 }
 
 .product-detail--card .eye {
-    background-image: url('/assets/icons/eye.svg');
+    background-image: url('../assets/icons/eye.svg');
 }
 
 .product-detail--card .cash {
-    background-image: url('/assets/icons/dollar-sign.svg');
+    background-image: url('../assets/icons/dollar-sign.svg');
 }
 
 .product-detail--card .check-circle {
-    background-image: url('/assets/icons/check-circle.svg');
+    background-image: url('../assets/icons/check-circle.svg');
 }
 
 .product--card-title {
@@ -409,7 +425,7 @@ main {
     width: 100%;
     min-width: 320px;
     height: 50vh;
-    background-image: url('/assets/img/bitcoinbaby2x.jpg');
+    background-image: url('../assets/img/bitcoinbaby2x.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -540,7 +556,7 @@ main {
     display: inline-block;
     width: 20px;
     height: 20px;
-    background-image: url('/assets/icons/orange-right-arrow.svg');
+    background-image: url('../assets/icons/orange-right-arrow.svg');
     vertical-align: text-bottom;
 }
 
